<resources>
	<string name="manappvs" translatable="false">1.0.81</string>
	<string name="otsikko">MCPEinfo</string>
    <string name="app_name">MCPEinfo</string>
	<string name="exit">Exit app</string>
	<string name="introduction">Introduction</string>
	<string name="basic">Basics</string>
	<string name="secret">Commands</string>
	<string name="cmd">Write changelog in command screen to see the changelog\n\nWrite upcoming in command screen to see upcoming stuff</string>
	<string name="cmdline">Enter command</string>
	<string name="enter">Enter</string>
	<string name="clog">Changelog</string>
	<string name="note">NOTE!\nThe commands are case-sensitive!</string>
	<string name="basictxt">Welcome to learn basics of MCPE</string>
	<string name="menut">Main menu and Settings</string>
	<string name="playmenutxt">This is what you will see when you tap on the Play button.\nIf you already have created worlds, you would see them here.\nTo create a new world, tap on New, and you should see something like this:</string>
	<string name="playmenutxt2">Here you would have to give your world a name. Then you can type something in the seed box. You can also leave it blank for a random seed. Then, on the right side of the screen, you can select what gametype you want it to be: Creative or Survival. And when you are done, tap on the Generate World -button.\n\n\nSince 0.7.4, it has been possible to join external servers straight from the app. To do this, tap on the Edit button in the Play menu, and then tap on External. You should see something like this:</string>
	<string name="playmenutxt3">At first, you can name the server anything you want. Then, in to the second box, you should type the server IP. And in to the last box, goes the server port, and usually that is 19132. And when everything is done, tap the Add Server button.</string>
	<string name="openpic">Open the picture</string>
	<string name="oldversions">(If you want to see this section for older MCPE versions, write oldbasics in the command screen)</string>
	<string name="crashrep">What did you do that caused the app to crash?</string>
	<string name="buganswer">Type your answer here</string>
	<string name="extracomment">Type an extra comment(Optional)</string>
	<string name="extracommentanswer">Type something!</string>
	<string name="taptosend">Tap the button below to send this feedback.\nYour email will open. Then just send the email.</string>
	<string name="taptosendrating">Tap the button below to send this rating.\nYour email will open. Then just send the email.</string>
	<string name="sendbtn">SEND</string>
	<string name="giverating">Rate this app</string>
	<string name="selectotherfbsub">Select subject</string>
	<string name="typemsghere">Type your message here</string>
	<string name="craftingtutorial">Crafting</string>
	<string name="craftingintro">In this section of MCPEinfo, you will learn how to use the crafting interface in MCPE.\n\nYou can use the crafting interface in survival mode only. The system works very differently compared to the PC version, but is a bit similar to the console version of Minecraft.\nThere is a crafting menu that you can acces through your inventory. To open your inventory, tap the icon with three dots[...]:</string>
	<string name="craftingintro2">...and you should see something like this:</string>
	<string name="craftingintro3">In the upper right part of the screen, there are two buttons: Craft and Armor.\nTap on the \"Craft\" button to open the crafting menu.\nTap on the button below to learn how to use the crafting interface.\n</string>
	<string name="learnhowtocraft">Learn how to use the crafting interface</string>
	<string name="usingcraftui">Using the crafting interface</string>
	<string name="howtocraft_text080">Now you wil learn how to use the crafting interface. It has been made quite simple in MCPE, since you don\'t need to remember the crafting recipes at all.\nSo, let\'s get started!\n\nOnce you have your crafting screen open, you should be able to see something like this:\n</string>
	<string name="howtocraft_text2080">At the left side of the screen, you can see 4 icons, and when you tap on one of them, the corresponding menu will appear. In the middle of the screen, you can see all of the items you can craft, and they are organized alphabetically. If you have items in your inventory, that you can use to craft something, those crafting recipes will appear on the top of the list. At the right side of the screen, you can see what items are required to craft the selected item. It will also show you the amount of the required items you have in your inventory, and below that, is a description for the item. For example in the picture above, I have a bunch of cobblestone in my inventory, so the recipe for the stonecutter will appear at the top of my list. At the right side of the screen, you can see that the stonecutter requires 4 cobblestone to be crafted, and i have over 99. To craft an item, tap on the box at the right side of the screen, and the item will be crafted. To acces all of the crafting recipes, you will have to make a crafting table, which requires 4 wooden planks. Here\'s what a crafting table looks like:\n</string>
	<string name="howtocraft_text3080">And to craft all of the stone-related blocks, you will have to make a stonecutter. A stonecutters interface works in the same way as a normal crafting interface, so nothing special over there.</string>
	<string name="furnacetutorial">Furnace</string>
	<string name="furnaceintro080">In this section of MCPEinfo, you will learn how to use the furnace in MCPE.\n\nYou can use the furnace in survival mode only. The furnace interface works pretty similarly compared to the PC and Console edition, so if you have used those, this will be quite easy.\nTo build a furnace, you need 8 cobblestone. The furnace recipe is only available through the crafting table.</string>
	<string name="taptolearncraft">Tap this button to learn how to craft</string>
	<string name="furnaceintro2080">Now that you have a furnace built, we can move on to the next step.\nTap the button below to learn how to use the furnaces interface.</string>
	<string name="howtosmelt">Learn how to use the furnace</string>
	<string name="usingfurnace">Using the furnace</string>
	<string name="howtosmelt_text080">To use a furnace tap on it(has to be placed on the ground), or if you have split touch controls enabled, as in the picture below, just point the crosshair at the furnace and tap the screen.</string>
	<string name="howtosmelt_text2080">An interface for the furnace should open.</string>
	<string name="howtosmelt_text3080">On the left side of the screen you can see all of the blocks that you can use with the furnace. On the right side of the screen, there are three boxes. The box at the very right edge of the screen, is the \"output\", here all of the smelted or cooked items will appear when the process is complete. The other two boxes, that are placed on top of each other, is where all of the magic happens. The box at the bottom, is where the fuel goes. When the box is selected(tap to select a box), in the inventory, all of the available fuel gets highlighted, an now you can select the fuel that you want to use, by tapping on the fuel. Fuel can basically be anything that\'s made of wood, including sticks, stairs, bookshelves etc.\nYou can also use coal, charcoal(made by burning/smelting wood in a furnace), and buckets filled with lava. If you select the upper box, you can place in whatever you want to cook or smelt. If you already have some fuel placed, the smelting/cooking process will start. It takes ten seconds for an item to get smelted or cooked in a furnace. All of the ready items will appear in the third box(at the right edge of the screen) and can be collected by tapping on it. Below there are pictures showing how the furnace works.</string>
	<string name="howtosmelt_text4080">In this picture, the fuel box is selected, and in the inventory at the left, you can see that the available fuel gets highlighted, in this case there\'s only coal available</string>
	<string name="howtosmelt_text5080">In this picture, the upper box is selected, and now you can see all of the cookable/smeltable items in your inventory highlighted. Note that once you have an item in both boxes, the smelting process will begin.</string>
	<string name="howtosmelt_text6080">Here you can see the smelting in action.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="customrom">Do you have a custom ROM in your device?</string>
	<string name="typerom">What is your ROM?</string>
	<string name="inputlanguage">Type your answers in english or finnish!</string>
</resources>