<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:id="@+id/backround">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<TextView
				android:id="@+id/basics080header"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/basic"
				android:textSize="34sp"/>

			<TextView
				android:id="@+id/basics080text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/basictxt"
				android:textSize="18sp"/>

			<TextView
				android:id="@+id/basics080old"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/oldversions"
				android:layout_gravity="center"
				android:gravity="center"
				android:textSize="16sp"/>

			<Button
				android:id="@+id/menuS"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/menut"
				android:textSize="15sp"/>

			<Button
				android:id="@+id/craftingTut080"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/craftingtutorial"
				android:textSize="15sp"/>

			<Button
				android:id="@+id/furnaceTut080"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/furnacetutorial"
				android:textSize="15sp"/>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

