<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backround"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
	<TextView
		android:layout_height="wrap_content"
		android:text="@string/inputlanguage"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:layout_gravity="center"
		android:id="@+id/inputlang"/>

    <TextView
        android:id="@+id/otherfbsubtxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectotherfbsub"
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/otherfbsub"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:entries="@array/otherfeedback_array"
		android:textSize="30dp"/>

 <!--   <TextView
        android:id="@+id/extracomment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp" />  -->

    <EditText
        android:id="@+id/extracommentanswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:hint="@string/typemsghere" />

    <TextView
        android:id="@+id/taptosend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/taptosend"
        android:textSize="25dp" />

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendbtn"
		android:visibility="invisible"/>

</LinearLayout>
