<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:id="@+id/backround">

	<TextView
		android:id="@+id/howtocraft080header"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/usingcraftui"
		android:textSize="35dp"/>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<TextView
				android:id="@+id/howtocraft080text1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/howtocraft_text080"
				android:textSize="30dp"/>
			
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/crafting_interface_main080"
				android:layout_gravity="center"/>

			<TextView
				android:id="@+id/howtocraft080text2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/howtocraft_text2080"
				android:textSize="30dp"/>
			
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/crafting_table"/>

			<TextView
				android:id="@+id/howtocraft080text3"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/howtocraft_text3080"
				android:textSize="30dp"/>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

